dts/testData/inspections/syntax/PHandleWhitespaceLabel.dtsi
&<error descr="Unexpected whitespace">   </error>label {
    prop = &<error descr="Unexpected whitespace"> </error>label;
};

